# agora

./: .gitignore  CHANGELOG.md  README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
_design/homepage/: Agora Homepage.html  _verify.mjs  _verify_sections.mjs  app.compiled.js  app.src.js  app.src.jsx
_design/logo-kit/: EMBED.md  README.md  agora-brand-guidelines.html
docs/: CNAME  index.html
scripts/: build_macos_icons.py
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: background.rs  db.rs  lib.rs  memory_auto.rs  paths.rs  state.rs  wiki_watcher.rs
src-tauri/src/commands/: ai_proxy.rs  background.rs  brand_loader.rs  chat.rs  conversations.rs  daily_log.rs  export.rs  global_settings.rs  memory_active.rs  memory_auto_cmd.rs  messages.rs  mod.rs  models.rs  raw.rs  wiki.rs
src-tauri/src/models/: conversation.rs  global_settings.rs  message.rs  mod.rs  model_config.rs
src-tauri/src/providers/: anthropic.rs  gemini.rs  mod.rs  openai.rs
src-tauri/templates/: AGENTS.md  SOUL.md
src/components/chat/: ChatArea.tsx  ChatInput.tsx  MarkdownRenderer.tsx  MessageBubble.tsx  MessageList.tsx  QueuedChips.tsx  StreamingIndicator.tsx  WikiContextChip.tsx
src/components/launcher/: LauncherPanel.tsx
src/components/layout/: AppSidebar.tsx  ConversationItem.tsx  ConversationList.tsx  WindowControls.tsx
src/components/menubar/: MenuBarPanel.tsx
src/components/settings/: CapabilitiesForm.tsx  EmbeddingModelForm.tsx  EmbeddingModelList.tsx  GeneralForm.tsx  HooksForm.tsx  McpServersList.tsx  MemoryForm.tsx  ModelForm.tsx  ModelList.tsx  ModelSelector.tsx  ModelsPage.tsx  PermissionsForm.tsx  ProviderIcon.tsx  ProvidersForm.tsx  SettingsDialog.tsx  SettingsPage.tsx  SettingsSection.tsx  SkillsList.tsx
src/components/ui/: ai-prompt-box.tsx
src/hooks/: useAiSdkChat.ts  useStreamChat.ts
src/lib/: background.ts  slash.ts
src/lib/ai/: auto-memory.ts  dreaming.ts  tools.ts  wiki-ingest.ts  wiki-selector.ts
src/store/: askUserStore.ts  brandStore.ts  chatStore.ts  settingsStore.ts  wikiStore.ts
src/types/: index.ts
