[package]
name = "agora"
version = "0.1.0-alpha.1"
description = "Agora AI Chatbot"
authors = []
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "agora_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "sqlite",
    "macros",
] }
rmcp = { version = "=1.5.0", default-features = false, features = [
    "client",
    "transport-child-process",
    "transport-streamable-http-client-reqwest",
    "reqwest",
] }
gray_matter = { version = "0.2", default-features = false, features = ["yaml"] }
tauri-plugin-dialog = "2"
base64 = "0.22"
once_cell = "1"
regex = "1"
notify = "8"
notify-debouncer-full = "0.6"
pdf-extract = "0.9"
hnsw_rs = "0.3"
image = { version = "0.25", default-features = false, features = ["png"] }

# Built-in FS/Grep tools — same crates ripgrep ships with.
ignore = "0.4"
globset = "0.4"
grep-regex = "0.1"
grep-searcher = "0.1"
walkdir = "2"

[dev-dependencies]
tempfile = "3"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = [
    "NSSharingService",
    "NSView",
    "NSWindow",
    "NSResponder",
    "NSApplication",
    "NSEvent",
] }
objc2-foundation = { version = "0.3", features = [
    "NSString",
    "NSArray",
    "NSURL",
    "NSGeometry",
    "NSData",
    "NSValue",
    "NSError",
] }
objc2-web-kit = { version = "0.3", features = [
    "WKWebView",
    "WKWebViewConfiguration",
    "WKPDFConfiguration",
    "objc2-core-foundation",
    "block2",
] }
objc2-core-foundation = { version = "0.3", features = ["CFCGTypes"] }
block2 = "0.6"
